--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <h2>About Me</h2>
             <p>I am a master's student in <a href="https://www.econ.kyoto-u.ac.jp" target="_blank">Graduate School of Economics, Kyoto University</a> (Address: Yoshida Honmachi, Sakyo, Kyoto 606-8501, Japan).</p>
-            <p>Contacts: matsumura.yasuyuki.w85 &commat; kyoto-u.jp</p>
+            <p><i class="bi bi-mortarboard" style="color: var(--icon-color); font-size: 1.3em; vertical-align: middle;"></i>matsumura.yasuyuki.w85 &commat; kyoto-u.jp</p>
             <p>Other Links: <a href="https://linktr.ee/yasu0704xx" target="_blank">Linktree</a></p>
         </div>
     </section>
@@ -35,8 +35,8 @@
 
     <section id="research">
         <div class="container">
-            <h2>Research Field: Econometrics, Causal Inference</h2>
-            <p>I am currently working on the following topics:</p>
+            <h2>Research Interests</h2>
+            <p>I am currently working on the following topics in Econometrics and Causal Inference:</p>
             <ul>
                 <li>Pretesting</li>
                 <li>Selective Inference</li>
