--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <h2>About Me</h2>
             <p>I am a master's student in <a href="https://www.econ.kyoto-u.ac.jp" target="_blank">Graduate School of Economics, Kyoto University</a> (Address: Yoshida Honmachi, Sakyo, Kyoto 606-8501, Japan).</p>
-            <p><i class="bi bi-mortarboard" style="color: var(--icon-color); font-size: 1.3em; vertical-align: middle;"></i>matsumura.yasuyuki.w85 &commat; kyoto-u.jp</p>
+            <p>Contact: matsumura.yasuyuki.w85 &commat; kyoto-u.jp</p>
             <p>Other Links: <a href="https://linktr.ee/yasu0704xx" target="_blank">Linktree</a></p>
         </div>
     </section>
@@ -48,9 +48,9 @@
         <div class="container">
             <h2>Materials</h2>
             <ul>
-                <li>Slides I used in Econometrics 1 & Econometrics 2 (2025) in Kyoto U are available <a href="https://github.com/yasu0704xx/Econometrics2025" target="_blank">here</a>.</li>
-                <li>Slides I used in Econometrics 1 & Econometrics 2 (2024) in Kyoto U are available <a href="https://github.com/yasu0704xx/NonparametricEconometrics2024" target="_blank">here</a>.</li>
-                <li>Slides I used in Development Economics 1 (2024) & Development Economics 2 (2025) in Kyoto U will be available <a href="https://github.com/yasu0704xx" target="_blank">here</a> soon.</li>
+                <li>Slides I used in Econometrics 1 & 2 (2025) in Kyoto U will be available <a href="https://github.com/yasu0704xx/Econometrics2025" target="_blank">here</a> soon.</li>
+                <li>Slides I used in Econometrics 1 & 2 (2024) in Kyoto U are available <a href="https://github.com/yasu0704xx/NonparametricEconometrics2024" target="_blank">here</a>.</li>
+                <li>Slides I used in Development Economics 1 & 2 (Fall 2024, Spring 2025) in Kyoto U will be available <a href="https://github.com/yasu0704xx" target="_blank">here</a> soon.</li>
             </ul>
         </div>
     </section>
