--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
+            <img src="me.jpg" alt="My Photo" class="profile-photo">
             <p>I am a master's student in <a href="https://www.econ.kyoto-u.ac.jp" target="_blank">Graduate School of Economics, Kyoto University</a> (Address: Yoshida Honmachi, Sakyo, Kyoto 606-8501, Japan).</p>
             <p>Contact: matsumura.yasuyuki.w85 &commat; kyoto-u.jp</p>
             <p>Other Links: <a href="https://linktr.ee/yasu0704xx" target="_blank">Linktree</a></p>
