--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <header class="header">
         <div class="logo">
             Yasuyuki Matsumura <span>Master's student, Graduate School of Economics, Kyoto University</span>
-            <span>松村 泰行，京都大学大学院経済学研究科修士課程</span>
+            <span>松村 泰行，京都大学 大学院経済学研究科 修士2年</span>
         </div>
     </header>
 
@@ -15,7 +15,7 @@
         <div class="container">
             <h2>About Me</h2>
             <img src="me.jpg" alt="My Photo" class="profile-photo">
-            <p>I am a master's student in <a href="https://www.econ.kyoto-u.ac.jp" target="_blank">Graduate School of Economics, Kyoto University</a> (Address: Yoshida Honmachi, Sakyo, Kyoto 606-8501, Japan).</p>
+            <p>I am a second-year master's student in <a href="https://www.econ.kyoto-u.ac.jp" target="_blank">Graduate School of Economics</a>, <a href="https://www.kyoto-u.ac.jp/ja" target="_blank">Kyoto University</a> (Address: Yoshida Honmachi, Sakyo, Kyoto 606-8501, Japan).</p>
             <p>Contact: matsumura.yasuyuki.w85 &commat; kyoto-u.jp</p>
             <p>Other Links: <a href="https://linktr.ee/yasu0704xx" target="_blank">Linktree</a></p>
         </div>
