--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
     <header class="header">
         <div class="logo">
-            Yasuyuki Matsumura <span>Master's student, Graduate School of Economics, Kyoto University</span>
-            <span>松村 泰行，京都大学 大学院経済学研究科 修士2年</span>
+            Yasuyuki Matsumura <span>Second-Year Master's Student, Graduate School of Economics, Kyoto University</span>
+            <span>松村 泰行，京都大学大学院経済学研究科修士2年</span>
         </div>
     </header>
 
