--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
             Yasuyuki Matsumura <span>Second-Year Master's Student, Graduate School of Economics, Kyoto University</span>
             <span>松村 泰行，京都大学大学院経済学研究科修士2年</span>
         </div>
+        <nav class="nav">
+            <a href="index.html">Home</a>
+            <a href="research.html">Research</a>
+        </nav>
     </header>
 
     <section id="about">
