--- a/research.html
+++ b/research.html
@@ -19,17 +19,22 @@
     </header>
 
   <section id="research">
-        <div class="container">
+       <div class="container">
+            <h2>Materials</h2>
+            <ul>
+                <li>Slides I used in Econometrics 1 & 2 (2025) in Kyoto U will be available <a href="https://github.com/yasu0704xx/Econometrics2025" target="_blank">here</a> soon.</li>
+                <li>Slides I used in Econometrics 1 & 2 (2024) in Kyoto U are available <a href="https://github.com/yasu0704xx/NonparametricEconometrics2024" target="_blank">here</a>.</li>
+                <li>Slides I used in Development Economics 1 & 2 (Fall 2024, Spring 2025) in Kyoto U will be available <a href="https://github.com/yasu0704xx" target="_blank">here</a> soon.</li>
+            </ul>
+       </div>
+       <div class="container">
             <h2>Publications</h2>
-        </div>
+       </div>
        <div class="container">
             <h2>Preptints</h2>
        </div>
        <div class="container">
             <h2>Awards</h2>
-       </div>
-       <div class="container">
-            <h2>Class Materials</h2>
        </div>
   </section>
 
