--- a/research.html
+++ b/research.html
@@ -31,7 +31,7 @@
             <h2>Publications</h2>
        </div>
        <div class="container">
-            <h2>Preptints</h2>
+            <h2>Preprints</h2>
        </div>
        <div class="container">
             <h2>Awards</h2>
