--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2>About Me</h2>
             <img src="me.jpg" alt="My Photo" class="profile-photo">
             <p>I am a second-year master's student in <a href="https://www.econ.kyoto-u.ac.jp" target="_blank">Graduate School of Economics</a>, <a href="https://www.kyoto-u.ac.jp/ja" target="_blank">Kyoto University</a> (Address: Yoshida Honmachi, Sakyo, Kyoto 606-8501, Japan).</p>
-            <p>Contact: matsumura.yasuyuki.w85 &commat; kyoto-u.jp</p>
+            <p>Contact: matsumura.yasuyuki.w85 [at] kyoto-u.jp</p>
             <p>Other Links: <a href="https://linktr.ee/yasu0704xx" target="_blank">Linktree</a></p>
         </div>
     </section>
