--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
         <div class="container">
             <h2>About Me</h2>
             <img src="me.jpg" alt="My Photo" class="profile-photo">
-            <p>I am a second-year master's student in <a href="https://www.econ.kyoto-u.ac.jp" target="_blank">Graduate School of Economics</a>, <a href="https://www.kyoto-u.ac.jp/ja" target="_blank">Kyoto University</a> (Address: Yoshida Honmachi, Sakyo, Kyoto 606-8501, Japan).</p>
+            <p>I am a second-year master's student in 
+                <a href="https://www.econ.kyoto-u.ac.jp" target="_blank">Graduate School of Economics</a>, 
+                <a href="https://www.kyoto-u.ac.jp/ja" target="_blank">Kyoto University</a> (Address: Yoshida Honmachi, Sakyo, Kyoto 606-8501, Japan).
+                Under the guidance of 
+                <a href="https://www.kier.kyoto-u.ac.jp/faculty/387/" target="_blank">Yoshihiko Nishiyama</a> and
+                <a href="https://sites.google.com/view/takahide-yanagi/" target="_blank">Takahide Yanagi</a>,
+                my research focuses on Econometric Theory and Statistics.
+            </p>
             <p>Contact: matsumura.yasuyuki.w85 [at] kyoto-u.jp</p>
             <p>Other Links: <a href="https://linktr.ee/yasu0704xx" target="_blank">Linktree</a></p>
         </div>
@@ -31,7 +38,7 @@
     <section id="research">
         <div class="container">
             <h2>Research Interests</h2>
-            <p>I am currently working on the following topics in Econometrics and Causal Inference:</p>
+            <p>I am currently working on the following topics:</p>
             <ul>
                 <li>Pretesting</li>
                 <li>Selective Inference</li>
