--- a/japanese.html
+++ b/japanese.html
@@ -1,57 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yasuyuki Matsumura - Home</title>
+    <title>松村 泰行 - 日本語</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
         <div class="logo">
-            Yasuyuki Matsumura <span>Second-Year Master's Student, Graduate School of Economics, Kyoto University</span>
+            松村 泰行 <span>京都大学 大学院経済学研究科 修士2年</span>
         </div>
         <nav class="nav">
             <a href="index.html">Home</a>
             <a href="research.html">Research</a>
+            <a href="japanese.html">Japanese</a>
         </nav>
     </header>
 
     <section id="about">
         <div class="container">
-            <h2>About Me</h2>
+            <h2>プロフィール</h2>
             <img src="me.jpg" alt="My Photo" class="profile-photo">
-            <p>I am a second-year master's student in 
-                <a href="https://www.econ.kyoto-u.ac.jp" target="_blank">Graduate School of Economics</a>, 
-                <a href="https://www.kyoto-u.ac.jp/ja" target="_blank">Kyoto University</a> (Address: Yoshida Honmachi, Sakyo, Kyoto 606-8501, Japan).
-                Under the guidance of 
-                <a href="https://www.kier.kyoto-u.ac.jp/faculty/387/" target="_blank">Yoshihiko Nishiyama</a> and
-                <a href="https://sites.google.com/view/takahide-yanagi/" target="_blank">Takahide Yanagi</a>,
-                my research focuses on Econometric Theory and Statistics.
+            <p>所属：<a href="https://www.kyoto-u.ac.jp/ja" target="_blank">京都大学</a> <a href="https://www.econ.kyoto-u.ac.jp" target="_blank">大学大学院経済学研究科</a> 修士2年
             </p>
-            <p>Contact: matsumura.yasuyuki.w85 [at] kyoto-u.jp</p>
-            <p>Other Links: <a href="https://linktr.ee/yasu0704xx" target="_blank">Linktree</a></p>
-        </div>
-    </section>
-
-    
-    <section id="research">
-        <div class="container">
-            <h2>Research Interests</h2>
-            <p>I am currently working on the following topics:</p>
-            <ul>
-                <li>Pretesting</li>
-                <li>Selective Inference</li>
-            </ul>
+            <p>研究領域：計量経済学，数理統計学</p>
+            <p>指導教員：<a href="https://www.kier.kyoto-u.ac.jp/faculty/387/" target="_blank">西山慶彦先生</a>，
+                        <a href="https://sites.google.com/view/takahide-yanagi/" target="_blank">柳貴英先生</a>
+            </p>
+            <p>連絡先: matsumura.yasuyuki.w85 [at] kyoto-u.jp</p>
+            <p>その他: <a href="https://linktr.ee/yasu0704xx" target="_blank">Linktree</a></p>
         </div>
     </section>
 
     
     <section id="education">
         <div class="container">
-            <h2>Education</h2>
-            <p><b>M.A. in Economics (Expected)</b>, Graduate School of Economics, Kyoto University, 2026.</p>
-            <p><b>B.A. in Economics</b>, School of Political Science and Economics, Waseda University, 2024.</p>
+            <h2>学歴</h2>
+            <p><b>修士（経済学，2026 （見込））</b>，京都大学 大学院経済学研究科 </p>
+            <p><b>学士（経済学，2024）</b>，早稲田大学 政治経済学部 </p>
         </div>
     </section>
 
