--- a/japanese.html
+++ b/japanese.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            松村 泰行 <span>京都大学 大学院経済学研究科 修士2年</span>
+            松村 泰行（まつむら やすゆき） <span>京都大学 大学院経済学研究科</span>
         </div>
         <nav class="nav">
             <a href="index.html">Home</a>
@@ -22,23 +22,31 @@
         <div class="container">
             <h2>プロフィール</h2>
             <img src="me.jpg" alt="My Photo" class="profile-photo">
-            <p>所属：<a href="https://www.kyoto-u.ac.jp/ja" target="_blank">京都大学</a> <a href="https://www.econ.kyoto-u.ac.jp" target="_blank">大学大学院経済学研究科</a> 修士2年
+            <p>所属：<a href="https://www.kyoto-u.ac.jp/ja" target="_blank">京都大学</a> <a href="https://www.econ.kyoto-u.ac.jp" target="_blank">大学院経済学研究科</a> 修士2年
             </p>
             <p>研究領域：計量経済学，数理統計学</p>
-            <p>指導教員：<a href="https://www.kier.kyoto-u.ac.jp/faculty/387/" target="_blank">西山慶彦先生</a>，
-                        <a href="https://sites.google.com/view/takahide-yanagi/" target="_blank">柳貴英先生</a>
+            <p>指導教員：<a href="https://www.kier.kyoto-u.ac.jp/faculty/387/" target="_blank">西山慶彦</a>先生，
+                        <a href="https://sites.google.com/view/takahide-yanagi/" target="_blank">柳貴英</a>先生
             </p>
             <p>連絡先: matsumura.yasuyuki.w85 [at] kyoto-u.jp</p>
             <p>その他: <a href="https://linktr.ee/yasu0704xx" target="_blank">Linktree</a></p>
         </div>
     </section>
 
+     <section id="research">
+        <div class="container">
+            <h2>研究</h2>
+             <p><a href="index.html">Home</a>や<a href="research.html">Research</a>をご覧ください．</p>
+        </div>
+    </section>
+
+
     
     <section id="education">
         <div class="container">
             <h2>学歴</h2>
-            <p><b>修士（経済学，2026 （見込））</b>，京都大学 大学院経済学研究科 </p>
-            <p><b>学士（経済学，2024）</b>，早稲田大学 政治経済学部 </p>
+            <p><b>修士（経済学，2026 （見込））</b>，京都大学 大学院経済学研究科（指導教員：<a href="https://www.kier.kyoto-u.ac.jp/faculty/387/" target="_blank">西山慶彦</a>先生，<a href="https://sites.google.com/view/takahide-yanagi/" target="_blank">柳貴英</a>先生） </p>
+            <p><b>学士（経済学，2024）</b>，早稲田大学 政治経済学部（指導教員：<a href="https://w-rdb.waseda.jp/html/100000609_ja.html" target="_blank">田中久稔</a>先生）</p>
         </div>
     </section>
 
