--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            Yasuyuki Matsumura <span>Second-Year Master's Student, Graduate School of Economics, Kyoto University</span>
+            Yasuyuki Matsumura <span>Master's Student, Graduate School of Economics, Kyoto University</span>
         </div>
         <nav class="nav">
             <a href="index.html">Home</a>
