--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <section id="education">
         <div class="container">
             <h2>Education</h2>
-            <p><b>M.A. in Economics (Expected)</b>, Graduate School of Economics, Kyoto University, 2026.</p>
-            <p><b>B.A. in Economics</b>, School of Political Science and Economics, Waseda University, 2024.</p>
+            <p><b>M.A. in Economics (Expected)</b>, Graduate School of Economics, Kyoto University, 2026 (Advisors: <a href="https://www.kier.kyoto-u.ac.jp/faculty/387/" target="_blank">Yoshihiko Nishiyama</a> and <a href="https://sites.google.com/view/takahide-yanagi/" target="_blank">Takahide Yanagi</a>).</p>
+            <p><b>B.A. in Economics</b>, School of Political Science and Economics, Waseda University, 2024 (Advisor: <a href="https://w-rdb.waseda.jp/html/100000609_en.html" target="_blank">Hisatoshi Tanaka</a>).</p>
         </div>
     </section>
 
