--- a/japanese.html
+++ b/japanese.html
@@ -9,7 +9,9 @@
 <body>
     <header class="header">
         <div class="logo">
-            松村 泰行（まつむら やすゆき） <span>京都大学 大学院経済学研究科</span>
+            松村 泰行
+            <span>まつむら やすゆき</span>
+            <span>京都大学 大学院経済学研究科</span>
         </div>
         <nav class="nav">
             <a href="index.html">Home</a>
