--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
             <p>I am a second-year master's student in 
                 <a href="https://www.econ.kyoto-u.ac.jp" target="_blank">Graduate School of Economics</a>, 
                 <a href="https://www.kyoto-u.ac.jp/ja" target="_blank">Kyoto University</a> (Address: Yoshida Honmachi, Sakyo, Kyoto 606-8501, Japan).
-                Under the guidance of 
-                <a href="https://www.kier.kyoto-u.ac.jp/faculty/387/" target="_blank">Yoshihiko Nishiyama</a> and
+            </p>
+            <p> Under the guidance of 
+                <a href="https://www.kier.kyoto-u.ac.jp/en/faculty/387/" target="_blank">Yoshihiko Nishiyama</a> and
                 <a href="https://sites.google.com/view/takahide-yanagi/" target="_blank">Takahide Yanagi</a>,
                 my research focuses on Econometric Theory and Statistics.
             </p>
@@ -51,7 +52,7 @@
     <section id="education">
         <div class="container">
             <h2>Education</h2>
-            <p><b>M.A. in Economics (Expected)</b>, Graduate School of Economics, Kyoto University, 2026 (Advisors: <a href="https://www.kier.kyoto-u.ac.jp/faculty/387/" target="_blank">Yoshihiko Nishiyama</a> and <a href="https://sites.google.com/view/takahide-yanagi/" target="_blank">Takahide Yanagi</a>).</p>
+            <p><b>M.A. in Economics (Expected)</b>, Graduate School of Economics, Kyoto University, 2026 (Advisors: <a href="https://www.kier.kyoto-u.ac.jp/en/faculty/387/" target="_blank">Yoshihiko Nishiyama</a> and <a href="https://sites.google.com/view/takahide-yanagi/" target="_blank">Takahide Yanagi</a>).</p>
             <p><b>B.A. in Economics</b>, School of Political Science and Economics, Waseda University, 2024 (Advisor: <a href="https://w-rdb.waseda.jp/html/100000609_en.html" target="_blank">Hisatoshi Tanaka</a>).</p>
         </div>
     </section>
