--- a/japanese.html
+++ b/japanese.html
@@ -47,8 +47,8 @@
     <section id="education">
         <div class="container">
             <h2>学歴</h2>
-            <p><b>修士（経済学，2026 (見込み)）</b>，京都大学 大学院経済学研究科（指導教員：<a href="https://www.kier.kyoto-u.ac.jp/faculty/387/" target="_blank">西山慶彦</a>先生，<a href="https://sites.google.com/view/takahide-yanagi/japanese?authuser=0" target="_blank">柳貴英</a>先生） </p>
-            <p><b>学士（経済学，2024）</b>，早稲田大学 政治経済学部（指導教員：<a href="https://w-rdb.waseda.jp/html/100000609_ja.html" target="_blank">田中久稔</a>先生）</p>
+            <p><b>修士（経済学，2026 (見込み)）</b> 京都大学 大学院経済学研究科（指導教員：<a href="https://www.kier.kyoto-u.ac.jp/faculty/387/" target="_blank">西山慶彦</a>先生，<a href="https://sites.google.com/view/takahide-yanagi/japanese?authuser=0" target="_blank">柳貴英</a>先生） </p>
+            <p><b>学士（経済学，2024）</b> 早稲田大学 政治経済学部（指導教員：<a href="https://w-rdb.waseda.jp/html/100000609_ja.html" target="_blank">田中久稔</a>先生）</p>
         </div>
     </section>
 
