--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img src="me.jpg" alt="My Photo" class="profile-photo">
             <p>I am a second-year master's student in 
                 <a href="https://www.econ.kyoto-u.ac.jp" target="_blank">Graduate School of Economics</a>, 
-                <a href="https://www.kyoto-u.ac.jp/ja" target="_blank">Kyoto University</a> (Address: Yoshida Honmachi, Sakyo, Kyoto 606-8501, Japan).
+                <a href="https://www.kyoto-u.ac.jp/ja" target="_blank">Kyoto University</a>.
             </p>
             <p> Under the guidance of 
                 <a href="https://www.kier.kyoto-u.ac.jp/en/faculty/387/" target="_blank">Yoshihiko Nishiyama</a> and
@@ -32,6 +32,7 @@
                 my research focuses on Econometric Theory and Statistics.
             </p>
             <p>Contact: matsumura.yasuyuki.w85 [at] kyoto-u.jp</p>
+            <p>Address: Yoshida Honmachi, Sakyo, Kyoto 606-8501, Japan</p> 
             <p>Other Links: <a href="https://linktr.ee/yasu0704xx" target="_blank">Linktree</a></p>
         </div>
     </section>
