--- a/japanese.html
+++ b/japanese.html
@@ -30,8 +30,9 @@
             <p>指導教員：<a href="https://www.kier.kyoto-u.ac.jp/faculty/387/" target="_blank">西山慶彦</a>先生，
                         <a href="https://sites.google.com/view/takahide-yanagi/japanese?authuser=0" target="_blank">柳貴英</a>先生
             </p>
-            <p>連絡先: matsumura.yasuyuki.w85 [at] kyoto-u.jp</p>
-            <p>その他: <a href="https://linktr.ee/yasu0704xx" target="_blank">Linktree</a></p>
+            <p>連絡先：matsumura.yasuyuki.w85 [at] kyoto-u.jp</p>
+            <p>住所：606-8501 京都市左京区吉田本町</p>
+            <p>その他：<a href="https://linktr.ee/yasu0704xx" target="_blank">Linktree</a></p>
         </div>
     </section>
 
