--- a/japanese.html
+++ b/japanese.html
@@ -60,51 +60,51 @@
             <h2>リンク集</h2>
             <p><b>計量経済学，数理統計学（和書）</b></p>
             <ul>
-                <li><a href="https://www.yuhikaku.co.jp/books/detail/9784641053854" target="_blank">計量経済学</a> <li>
-                <li><a href="https://www.nippyo.co.jp/shop/book/8108.html" target="_blank">計量経済学のための数学</a> <li>
-                <li><a href="https://www.rokakuho.co.jp/data/books/0173.html" target="_blank">関数解析入門のためのフーリエ変換・ラプラス変換・積分方程式・ルベーグ積分</a> <li>
-                <li><a href="https://www.nippyo.co.jp/shop/book/6899.html" target="_blank">計量経済学：ミクロデータ分析へのいざない</a> <li>
-                <li><a href="https://www.nippyo.co.jp/shop/book/9267.html" target="_blank">データ駆動型回帰分析：計量経済学と機械学習の融合</a> <li>
-                <li><a href="https://www.nippyo.co.jp/shop/book/9359.html" target="_blank">因果推論の計量経済学</a> <li>
-                <li><a href="https://www.kyoritsu-pub.co.jp/book/b10031225.html" target="_blank">ノン・セミパラメトリック統計解析</a> <li>
-                <li><a href="https://www.kyoritsu-pub.co.jp/book/b10003681.html" target="_blank">現代数理統計学の基礎</a> <li>    
-                <li><a href="https://www.rokakuho.co.jp/data/books/0125.html" target="_blank">統計学への確率論，その先へ</a> <li>
-                <li><a href="https://www.rokakuho.co.jp/data/books/0126.html" target="_blank">統計学への漸近論，その先は</a> <li>
+                <li><a href="https://www.yuhikaku.co.jp/books/detail/9784641053854" target="_blank">計量経済学</a> </li>
+                <li><a href="https://www.nippyo.co.jp/shop/book/8108.html" target="_blank">計量経済学のための数学</a> </li>
+                <li><a href="https://www.rokakuho.co.jp/data/books/0173.html" target="_blank">関数解析入門のためのフーリエ変換・ラプラス変換・積分方程式・ルベーグ積分</a> </li>
+                <li><a href="https://www.nippyo.co.jp/shop/book/6899.html" target="_blank">計量経済学：ミクロデータ分析へのいざない</a> </li>
+                <li><a href="https://www.nippyo.co.jp/shop/book/9267.html" target="_blank">データ駆動型回帰分析：計量経済学と機械学習の融合</a> </li>
+                <li><a href="https://www.nippyo.co.jp/shop/book/9359.html" target="_blank">因果推論の計量経済学</a> </li>
+                <li><a href="https://www.kyoritsu-pub.co.jp/book/b10031225.html" target="_blank">ノン・セミパラメトリック統計解析</a> </li>
+                <li><a href="https://www.kyoritsu-pub.co.jp/book/b10003681.html" target="_blank">現代数理統計学の基礎</a> </li>    
+                <li><a href="https://www.rokakuho.co.jp/data/books/0125.html" target="_blank">統計学への確率論，その先へ</a> </li>
+                <li><a href="https://www.rokakuho.co.jp/data/books/0126.html" target="_blank">統計学への漸近論，その先は</a> </li>
             </ul>
             <p><b>計量経済学，数理統計学（洋書）</b></p>
             <ul>
-                <li><a href="https://www.cambridge.org/core/books/asymptotic-statistics/A3C7DAD3F7E66A1FA60E9C8FE132EE1D" target="_blank">van der Vaart (1998)</a> <li>
-                <li><a href="https://mitpress.mit.edu/9780262232586/econometric-analysis-of-cross-section-and-panel-data/" target="_blank">Wooldridge (2010)</a> <li>
-                <li><a href="https://press.princeton.edu/books/hardcover/9780691235899/econometrics?srsltid=AfmBOop6PMmEwkbxdzOhydKjYMa3IAXQ0JoQOqO1EKZtdxQB1JjxSXhG" target="_blank">Hansen (2022)</a> <li>
-                <li><a href="https://www.sciencedirect.com/science/article/abs/pii/S1573441205800054" target="_blank">Newey & McFadden (1994)</a> <li>
-                <li><a href="https://www.jstor.org/stable/1913622" target="_blank">Pakes & Pollard (1989)</a> <li>
-                <li><a href="https://press.princeton.edu/books/hardcover/9780691121611/nonparametric-econometrics?srsltid=AfmBOoqZhwZmqK_guGQMtUetIJXbdHd5d_cwpw_XEIyUKsTL1eqB5ZVT" target="_blank">Li & Racine (2007)</a> <li>
-                <li><a href="https://www.cambridge.org/core/books/causal-inference-for-statistics-social-and-biomedical-sciences/71126BE90C58F1A431FE9B2DD07938AB" target="_blank">Imbens & Rubin (2015)</a> <li>
-                <li><a href="https://www.mostlyharmlesseconometrics.com/" target="_blank">Angrist & Pischke (2007)</a> <li>
-                <li><a href="https://www.sciencedirect.com/science/article/abs/pii/S1573447107040612" target="_blank">Duflo, Glennerster & Kremer (2007)</a> <li>
-                <li><a href="https://mixtape.scunning.com/" target="_blank">Cunningham (2021)</a> <li>
-                <li><a href="https://www.annualreviews.org/content/journals/10.1146/annurev-economics-080217-053402" target="_blank">Abadie & Cattaneo (2018)</a> <li>            
-                <li><a href="https://www.cambridge.org/jp/universitypress/subjects/economics/econometrics-statistics-and-mathematical-economics/impact-evaluation-treatment-effects-and-causal-analysis?format=HB&isbn=9781107042469" target="_blank">Frölich & Sperlich (2019)</a> <li>
+                <li><a href="https://www.cambridge.org/core/books/asymptotic-statistics/A3C7DAD3F7E66A1FA60E9C8FE132EE1D" target="_blank">van der Vaart (1998)</a> </li>
+                <li><a href="https://mitpress.mit.edu/9780262232586/econometric-analysis-of-cross-section-and-panel-data/" target="_blank">Wooldridge (2010)</a> </li>li>
+                <li><a href="https://press.princeton.edu/books/hardcover/9780691235899/econometrics?srsltid=AfmBOop6PMmEwkbxdzOhydKjYMa3IAXQ0JoQOqO1EKZtdxQB1JjxSXhG" target="_blank">Hansen (2022)</a> </li>
+                <li><a href="https://www.sciencedirect.com/science/article/abs/pii/S1573441205800054" target="_blank">Newey & McFadden (1994)</a> </li>
+                <li><a href="https://www.jstor.org/stable/1913622" target="_blank">Pakes & Pollard (1989)</a> </li>
+                <li><a href="https://press.princeton.edu/books/hardcover/9780691121611/nonparametric-econometrics?srsltid=AfmBOoqZhwZmqK_guGQMtUetIJXbdHd5d_cwpw_XEIyUKsTL1eqB5ZVT" target="_blank">Li & Racine (2007)</a> </li>
+                <li><a href="https://www.cambridge.org/core/books/causal-inference-for-statistics-social-and-biomedical-sciences/71126BE90C58F1A431FE9B2DD07938AB" target="_blank">Imbens & Rubin (2015)</a> </li>
+                <li><a href="https://www.mostlyharmlesseconometrics.com/" target="_blank">Angrist & Pischke (2007)</a> </li>
+                <li><a href="https://www.sciencedirect.com/science/article/abs/pii/S1573447107040612" target="_blank">Duflo, Glennerster & Kremer (2007)</a> </li>
+                <li><a href="https://mixtape.scunning.com/" target="_blank">Cunningham (2021)</a> </li>
+                <li><a href="https://www.annualreviews.org/content/journals/10.1146/annurev-economics-080217-053402" target="_blank">Abadie & Cattaneo (2018)</a> </li>            
+                <li><a href="https://www.cambridge.org/jp/universitypress/subjects/economics/econometrics-statistics-and-mathematical-economics/impact-evaluation-treatment-effects-and-causal-analysis?format=HB&isbn=9781107042469" target="_blank">Frölich & Sperlich (2019)</a> </li>
             </ul>
             <p><b>計量経済学，数理統計学（ウェブサイト）</b></p>
             <ul>
-                <li><a href="https://sites.google.com/site/okuiryoeconomics/%E6%8E%88%E6%A5%AD-teaching" target="_blank">因果推論</a> <li>
-                <li><a href="https://sites.google.com/site/naoyasueishij/teaching/nonpara?authuser=0" target="_blank">セミ・ノンパラメトリック計量分析</a> <li>
-                <li><a href="https://users.ssc.wisc.edu/~xshi/econ715.html" target="_blank">Econometrics Methods</a> <li>
-                <li><a href="https://users.ssc.wisc.edu/~bhansen/718/718.htm" target="_blank">NonParametric Econometrics</a> <li>
+                <li><a href="https://sites.google.com/site/okuiryoeconomics/%E6%8E%88%E6%A5%AD-teaching" target="_blank">因果推論</a> </li>
+                <li><a href="https://sites.google.com/site/naoyasueishij/teaching/nonpara?authuser=0" target="_blank">セミ・ノンパラメトリック計量分析</a> </li>
+                <li><a href="https://users.ssc.wisc.edu/~xshi/econ715.html" target="_blank">Econometrics Methods</a> </li>
+                <li><a href="https://users.ssc.wisc.edu/~bhansen/718/718.htm" target="_blank">NonParametric Econometrics</a> </li>
             </ul>
             <p><b>Bar & Restaurant</b></p>
             <ul>
-                <li><a href="https://www.instagram.com/yasu0704_foodie/" target="_blank">@yasu0704_foodie</a> (on Instagram)<li>
+                <li><a href="https://www.instagram.com/yasu0704_foodie/" target="_blank">@yasu0704_foodie</a> (on Instagram)</li>
             </ul>
             <p><b>Music</b></p>
             <ul>
-                <li><a href="https://www.1oaktokyo.com/" target="_blank">1OAK TOKYO</a> (Night Club)<li>
-                <li><a href="https://www.ghostosaka.com/" target="_blank">GHOST OSAKA</a> (Night Club)<li>
-                <li><a href="https://lymatokyo.com/" target="_blank">LYMA TOKYO</a> (Record Pool)<li>
-                <li><a href="https://open.spotify.com/playlist/7ni1syllXVGeA3M954DQ5F?si=JaE9vpVgSuCo_CB7aaGhMw&pi=SOabog6aTY6bk&nd=1&dlsi=d99514a2611c404e" target="_blank">HIPHOP 2025</a> Curated by <a href="https://open.spotify.com/user/213qtvnnltz4rhvtsljhuwytq" target="_blank">Attraction Crew</a><li>                
-                <li><a href="https://open.spotify.com/playlist/4Tv6YXcq1hIa2DT79xtl44?si=IX51Z94eTeSUbQXxFVX8vw&pi=NrELdxUHTQ2b8&nd=1&dlsi=2e2f91e24bb44a8a" target="_blank">One More Drink x Recommended 100%</a> Curated by <a href="https://www.instagram.com/iamdjmartin_/" target="_blank">DJ MARTIN</a><li>
-                <li><a href="https://www.power106.com/" target="_blank">Power 106</a> (Radio Station in LA)<li>
+                <li><a href="https://www.1oaktokyo.com/" target="_blank">1OAK TOKYO</a> (Night Club)</li>
+                <li><a href="https://www.ghostosaka.com/" target="_blank">GHOST OSAKA</a> (Night Club)</li>
+                <li><a href="https://lymatokyo.com/" target="_blank">LYMA TOKYO</a> (Record Pool)</li>li>
+                <li><a href="https://open.spotify.com/playlist/7ni1syllXVGeA3M954DQ5F?si=JaE9vpVgSuCo_CB7aaGhMw&pi=SOabog6aTY6bk&nd=1&dlsi=d99514a2611c404e" target="_blank">HIPHOP 2025</a> Curated by <a href="https://open.spotify.com/user/213qtvnnltz4rhvtsljhuwytq" target="_blank">Attraction Crew</a></li>                
+                <li><a href="https://open.spotify.com/playlist/4Tv6YXcq1hIa2DT79xtl44?si=IX51Z94eTeSUbQXxFVX8vw&pi=NrELdxUHTQ2b8&nd=1&dlsi=2e2f91e24bb44a8a" target="_blank">One More Drink x Recommended 100%</a> Curated by <a href="https://www.instagram.com/iamdjmartin_/" target="_blank">DJ MARTIN</a></li>
+                <li><a href="https://www.power106.com/" target="_blank">Power 106</a> (Radio Station in LA)</li>
                 <li><a href="https://www.hot97.com/" target="_blank">Hot 97</a> (Radio Station in NYC)</li>
                 <li><a href="https://https://www.mixcloud.com/headlinermusic/" target="_blank">FAED University</a> by <a href="https://headlinermusicclub.com/?utm_source=hoobe&utm_medium=social" target="_blank">Headliner Music Club</a></li>
                 <li><a href="https://www.mixcloud.com/ClubKillers/" target="_blank">Club Killers Radio</a> by <a href="https://clubkillers.com/" target="_blank">Club Killers</a> </li> 
