--- a/japanese.html
+++ b/japanese.html
@@ -74,7 +74,7 @@
             <p><b>計量経済学，数理統計学（洋書）</b></p>
             <ul>
                 <li><a href="https://www.cambridge.org/core/books/asymptotic-statistics/A3C7DAD3F7E66A1FA60E9C8FE132EE1D" target="_blank">van der Vaart (1998)</a> </li>
-                <li><a href="https://mitpress.mit.edu/9780262232586/econometric-analysis-of-cross-section-and-panel-data/" target="_blank">Wooldridge (2010)</a> </li>li>
+                <li><a href="https://mitpress.mit.edu/9780262232586/econometric-analysis-of-cross-section-and-panel-data/" target="_blank">Wooldridge (2010)</a> </li>
                 <li><a href="https://press.princeton.edu/books/hardcover/9780691235899/econometrics?srsltid=AfmBOop6PMmEwkbxdzOhydKjYMa3IAXQ0JoQOqO1EKZtdxQB1JjxSXhG" target="_blank">Hansen (2022)</a> </li>
                 <li><a href="https://www.sciencedirect.com/science/article/abs/pii/S1573441205800054" target="_blank">Newey & McFadden (1994)</a> </li>
                 <li><a href="https://www.jstor.org/stable/1913622" target="_blank">Pakes & Pollard (1989)</a> </li>
@@ -101,7 +101,7 @@
             <ul>
                 <li><a href="https://www.1oaktokyo.com/" target="_blank">1OAK TOKYO</a> (Night Club)</li>
                 <li><a href="https://www.ghostosaka.com/" target="_blank">GHOST OSAKA</a> (Night Club)</li>
-                <li><a href="https://lymatokyo.com/" target="_blank">LYMA TOKYO</a> (Record Pool)</li>li>
+                <li><a href="https://lymatokyo.com/" target="_blank">LYMA TOKYO</a> (Record Pool)</li>
                 <li><a href="https://open.spotify.com/playlist/7ni1syllXVGeA3M954DQ5F?si=JaE9vpVgSuCo_CB7aaGhMw&pi=SOabog6aTY6bk&nd=1&dlsi=d99514a2611c404e" target="_blank">HIPHOP 2025</a> Curated by <a href="https://open.spotify.com/user/213qtvnnltz4rhvtsljhuwytq" target="_blank">Attraction Crew</a></li>                
                 <li><a href="https://open.spotify.com/playlist/4Tv6YXcq1hIa2DT79xtl44?si=IX51Z94eTeSUbQXxFVX8vw&pi=NrELdxUHTQ2b8&nd=1&dlsi=2e2f91e24bb44a8a" target="_blank">One More Drink x Recommended 100%</a> Curated by <a href="https://www.instagram.com/iamdjmartin_/" target="_blank">DJ MARTIN</a></li>
                 <li><a href="https://www.power106.com/" target="_blank">Power 106</a> (Radio Station in LA)</li>
