--- a/japanese.html
+++ b/japanese.html
@@ -95,7 +95,10 @@
             </ul>
             <p><b>Bar & Restaurant</b></p>
             <ul>
-                <li><a href="https://www.instagram.com/yasu0704_foodie/" target="_blank">@yasu0704_foodie</a> (on Instagram)</li>
+                <li><a href="https://a10club.jp/" target="_blank">A10</a> in Ebisu, Tokyo</li>
+                <li><a href="https://wam-inc.jp/howl/" target="_blank">Howl</a> in Shibuya, Tokyo</li>
+                <li><a href="https://wam-inc.jp/howl/" target="_blank">Gold Bar at EDITION</a> in Toranomon, Tokyo</li>
+                <li><a href="https://www.instagram.com/yasu0704_foodie/" target="_blank">more info</a></li>
             </ul>
             <p><b>Music</b></p>
             <ul>
