--- a/japanese.html
+++ b/japanese.html
@@ -96,8 +96,8 @@
             <p><b>Bar & Restaurant</b></p>
             <ul>
                 <li><a href="https://a10club.jp/" target="_blank">A10</a> in Ebisu, Tokyo</li>
-                <li><a href="https://wam-inc.jp/howl/" target="_blank">Howl</a> in Shibuya, Tokyo</li>
-                <li><a href="https://wam-inc.jp/howl/" target="_blank">Gold Bar at EDITION</a> in Toranomon, Tokyo</li>
+                <li><a href="https://wam-inc.jp/howl/" target="_blank">HOWL</a> in Shibuya, Tokyo</li>
+                <li><a href="https://www.goldbaratedition.com/" target="_blank">Gold Bar at EDITION</a> in Toranomon, Tokyo</li>
                 <li><a href="https://www.instagram.com/yasu0704_foodie/" target="_blank">more info</a></li>
             </ul>
             <p><b>Music</b></p>
