--- a/japanese.html
+++ b/japanese.html
@@ -109,7 +109,7 @@
                 <li><a href="https://open.spotify.com/playlist/7ni1syllXVGeA3M954DQ5F?si=JaE9vpVgSuCo_CB7aaGhMw&pi=SOabog6aTY6bk&nd=1&dlsi=d99514a2611c404e" target="_blank">HIPHOP 2025</a> Curated by <a href="https://open.spotify.com/user/213qtvnnltz4rhvtsljhuwytq" target="_blank">Attraction Crew</a></li>                
                 <li><a href="https://www.power106.com/" target="_blank">Power 106</a> (Radio Station in LA)</li>
                 <li><a href="https://www.hot97.com/" target="_blank">Hot 97</a> (Radio Station in NYC)</li>
-                <li><a href="https://https://www.mixcloud.com/headlinermusic/" target="_blank">FAED University</a> Powered by <a href="https://headlinermusicclub.com/?utm_source=hoobe&utm_medium=social" target="_blank">Headliner Music Club</a></li>
+                <li><a href="https://www.mixcloud.com/headlinermusic/" target="_blank">FAED University</a> Powered by <a href="https://headlinermusicclub.com/?utm_source=hoobe&utm_medium=social" target="_blank">Headliner Music Club</a></li>
                 <li><a href="https://www.mixcloud.com/ClubKillers/" target="_blank">Club Killers Radio</a> Powered by <a href="https://clubkillers.com/" target="_blank">Club Killers</a> </li> 
                 <li><a href="https://www.mixcloud.com/RockwellRadio/" target="_blank">Rockwell Radio</a> Powered by <a href="https://www.rockwelltalent.com/" target="_blank">Rockwell Talent</a> </li> 
             </ul>
