--- a/research.html
+++ b/research.html
@@ -22,7 +22,7 @@
        <div class="container">
             <h2>Materials</h2>
             <ul>
-                <li>Slides I used in Econometrics 1 & 2 (2025) in Kyoto U are available <a href="https://github.com/yasu0704xx/Econometrics2025" target="_blank">here</a> soon.</li>
+                <li>Slides I used in Econometrics 1 & 2 (2025) in Kyoto U are available <a href="https://github.com/yasu0704xx/Econometrics2025" target="_blank">here</a>.</li>
                 <li>Slides I used in Econometrics 1 & 2 (2024) in Kyoto U are available <a href="https://github.com/yasu0704xx/NonparametricEconometrics2024" target="_blank">here</a>.</li>
                 <li>Slides I used in Development Economics 1 & 2 (Fall 2024, Spring 2025) in Kyoto U are available <a href="https://github.com/yasu0704xx/DevEcon2024-2025" target="_blank">here</a>.</li>
             </ul>
