--- a/research.html
+++ b/research.html
@@ -23,8 +23,22 @@
             <h2>Materials</h2>
             <ul>
                 <li>Slides I used in Econometrics 1 & 2 (2025) in Kyoto U are available <a href="https://github.com/yasu0704xx/Econometrics2025" target="_blank">here</a>.</li>
+                <ul>
+                    <li> Nonparametric Density Estimation </li>
+                </ul>
                 <li>Slides I used in Econometrics 1 & 2 (2024) in Kyoto U are available <a href="https://github.com/yasu0704xx/Econometrics2024" target="_blank">here</a>.</li>
-                <li>Article reviews (just for myself) are available <a href="https://github.com/yasu0704xx/ArticleReview" target="_blank">here</a>.</li>
+                <ul>
+                    <li> Semiparametric Partially Linear Models </li>
+                    <li> Semiparametric Single Index Models </li>
+                    <li> Additive and Smooth (Varying) Coefficient Semiparametric Models </li>
+                    <li> Selectivity Models </li>
+                    <li> Censored Models </li>
+                </ul>
+                <li>Reviews on econometric papers are available <a href="https://github.com/yasu0704xx/ArticleReview" target="_blank">here</a>.</li>
+                <ul>
+                    <li> Lee, Sun, Sun and Taylor (2016, Annals of Statistics) </li>
+                    <li> Roth and Sant'Anna (2023, Econometrica) </li>
+                </ul>
             </ul>
        </div>
        <div class="container">
