--- a/japanese.html
+++ b/japanese.html
@@ -60,16 +60,17 @@
             <h2>リンク集</h2>
             <p><b>計量経済学，数理統計学（和書）</b></p>
             <ul>
-                <li><a href="https://www.yuhikaku.co.jp/books/detail/9784641053854" target="_blank">計量経済学</a> </li>
-                <li><a href="https://www.nippyo.co.jp/shop/book/8108.html" target="_blank">計量経済学のための数学</a> </li>
-                <li><a href="https://www.rokakuho.co.jp/data/books/0173.html" target="_blank">関数解析入門のためのフーリエ変換・ラプラス変換・積分方程式・ルベーグ積分</a> </li>
-                <li><a href="https://www.nippyo.co.jp/shop/book/6899.html" target="_blank">計量経済学：ミクロデータ分析へのいざない</a> </li>
-                <li><a href="https://www.nippyo.co.jp/shop/book/9267.html" target="_blank">データ駆動型回帰分析：計量経済学と機械学習の融合</a> </li>
-                <li><a href="https://www.nippyo.co.jp/shop/book/9359.html" target="_blank">因果推論の計量経済学</a> </li>
-                <li><a href="https://www.kyoritsu-pub.co.jp/book/b10031225.html" target="_blank">ノン・セミパラメトリック統計解析</a> </li>
-                <li><a href="https://www.kyoritsu-pub.co.jp/book/b10003681.html" target="_blank">現代数理統計学の基礎</a> </li>    
-                <li><a href="https://www.rokakuho.co.jp/data/books/0125.html" target="_blank">統計学への確率論，その先へ</a> </li>
-                <li><a href="https://www.rokakuho.co.jp/data/books/0126.html" target="_blank">統計学への漸近論，その先は</a> </li>
+                <li> 久保川 <a href="https://www.kyoritsu-pub.co.jp/book/b10003681.html" target="_blank">現代数理統計学の基礎</a> </li>    
+                <li> 竹村 <a href="https://www.gakujutsu.co.jp/product/978-4-7806-0860-1/" target="_blank">現代数理統計学</a> </li>
+                <li> 清水 <a href="https://www.rokakuho.co.jp/data/books/0125.html" target="_blank">統計学への確率論，その先へ</a> </li>
+                <li> 清水 <a href="https://www.rokakuho.co.jp/data/books/0126.html" target="_blank">統計学への漸近論，その先は</a> </li>
+                <li> 西山・新谷・川口・奥井 <a href="https://www.yuhikaku.co.jp/books/detail/9784641053854" target="_blank">計量経済学</a> </li>
+                <li> 末石 <a href="https://www.nippyo.co.jp/shop/book/6899.html" target="_blank">計量経済学：ミクロデータ分析へのいざない</a> </li>
+                <li> 末石 <a href="https://www.nippyo.co.jp/shop/book/9267.html" target="_blank">データ駆動型回帰分析：計量経済学と機械学習の融合</a> </li>
+                <li> 川口・澤田 <a href="https://www.nippyo.co.jp/shop/book/9359.html" target="_blank">因果推論の計量経済学</a> </li>
+                <li> 西山・人見 <a href="https://www.kyoritsu-pub.co.jp/book/b10031225.html" target="_blank">ノン・セミパラメトリック統計解析</a> </li>
+                <li> 田中 <a href="https://www.nippyo.co.jp/shop/book/8108.html" target="_blank">計量経済学のための数学</a> </li>
+                <li> 瀬戸・細川 <a href="https://www.rokakuho.co.jp/data/books/0173.html" target="_blank">関数解析入門のためのフーリエ変換・ラプラス変換・積分方程式・ルベーグ積分</a> </li>
             </ul>
             <p><b>計量経済学，数理統計学（洋書）</b></p>
             <ul>
@@ -80,18 +81,16 @@
                 <li><a href="https://www.jstor.org/stable/1913622" target="_blank">Pakes & Pollard (1989)</a> </li>
                 <li><a href="https://press.princeton.edu/books/hardcover/9780691121611/nonparametric-econometrics?srsltid=AfmBOoqZhwZmqK_guGQMtUetIJXbdHd5d_cwpw_XEIyUKsTL1eqB5ZVT" target="_blank">Li & Racine (2007)</a> </li>
                 <li><a href="https://www.cambridge.org/core/books/causal-inference-for-statistics-social-and-biomedical-sciences/71126BE90C58F1A431FE9B2DD07938AB" target="_blank">Imbens & Rubin (2015)</a> </li>
-                <li><a href="https://www.mostlyharmlesseconometrics.com/" target="_blank">Angrist & Pischke (2007)</a> </li>
-                <li><a href="https://www.sciencedirect.com/science/article/abs/pii/S1573447107040612" target="_blank">Duflo, Glennerster & Kremer (2007)</a> </li>
+                <li><a href="https://www.mostlyharmlesseconometrics.com/" target="_blank">Angrist & Pischke (2007)</a> </li>       
                 <li><a href="https://mixtape.scunning.com/" target="_blank">Cunningham (2021)</a> </li>
-                <li><a href="https://www.annualreviews.org/content/journals/10.1146/annurev-economics-080217-053402" target="_blank">Abadie & Cattaneo (2018)</a> </li>            
                 <li><a href="https://www.cambridge.org/jp/universitypress/subjects/economics/econometrics-statistics-and-mathematical-economics/impact-evaluation-treatment-effects-and-causal-analysis?format=HB&isbn=9781107042469" target="_blank">Frölich & Sperlich (2019)</a> </li>
             </ul>
             <p><b>計量経済学，数理統計学（ウェブサイト）</b></p>
             <ul>
-                <li><a href="https://sites.google.com/site/okuiryoeconomics/%E6%8E%88%E6%A5%AD-teaching" target="_blank">因果推論</a> </li>
-                <li><a href="https://sites.google.com/site/naoyasueishij/teaching/nonpara?authuser=0" target="_blank">セミ・ノンパラメトリック計量分析</a> </li>
-                <li><a href="https://users.ssc.wisc.edu/~xshi/econ715.html" target="_blank">Econometrics Methods</a> </li>
-                <li><a href="https://users.ssc.wisc.edu/~bhansen/718/718.htm" target="_blank">NonParametric Econometrics</a> </li>
+                <li> 奥井 <a href="https://sites.google.com/site/okuiryoeconomics/%E6%8E%88%E6%A5%AD-teaching" target="_blank">因果推論</a> </li>
+                <li> 末石 <a href="https://sites.google.com/site/naoyasueishij/teaching/nonpara?authuser=0" target="_blank">セミ・ノンパラメトリック計量分析</a> </li>
+                <li> Shi <a href="https://users.ssc.wisc.edu/~xshi/econ715.html" target="_blank">Econometrics Methods</a> </li>
+                <li> Hansen <a href="https://users.ssc.wisc.edu/~bhansen/718/718.htm" target="_blank">NonParametric Econometrics</a> </li>
             </ul>
             <p><b>Bar & Restaurant</b></p>
             <ul>
