--- a/japanese.html
+++ b/japanese.html
@@ -75,15 +75,16 @@
             <p><b>計量経済学，数理統計学（洋書）</b></p>
             <ul>
                 <li><a href="https://www.cambridge.org/core/books/asymptotic-statistics/A3C7DAD3F7E66A1FA60E9C8FE132EE1D" target="_blank">van der Vaart (1998)</a> </li>
+                <li><a href="https://www.cambridge.org/core/books/causal-inference-for-statistics-social-and-biomedical-sciences/71126BE90C58F1A431FE9B2DD07938AB" target="_blank">Imbens & Rubin (2015)</a> </li>
                 <li><a href="https://mitpress.mit.edu/9780262232586/econometric-analysis-of-cross-section-and-panel-data/" target="_blank">Wooldridge (2010)</a> </li>
                 <li><a href="https://press.princeton.edu/books/hardcover/9780691235899/econometrics?srsltid=AfmBOop6PMmEwkbxdzOhydKjYMa3IAXQ0JoQOqO1EKZtdxQB1JjxSXhG" target="_blank">Hansen (2022)</a> </li>
                 <li><a href="https://www.sciencedirect.com/science/article/abs/pii/S1573441205800054" target="_blank">Newey & McFadden (1994)</a> </li>
                 <li><a href="https://www.jstor.org/stable/1913622" target="_blank">Pakes & Pollard (1989)</a> </li>
                 <li><a href="https://press.princeton.edu/books/hardcover/9780691121611/nonparametric-econometrics?srsltid=AfmBOoqZhwZmqK_guGQMtUetIJXbdHd5d_cwpw_XEIyUKsTL1eqB5ZVT" target="_blank">Li & Racine (2007)</a> </li>
-                <li><a href="https://www.cambridge.org/core/books/causal-inference-for-statistics-social-and-biomedical-sciences/71126BE90C58F1A431FE9B2DD07938AB" target="_blank">Imbens & Rubin (2015)</a> </li>
                 <li><a href="https://www.mostlyharmlesseconometrics.com/" target="_blank">Angrist & Pischke (2007)</a> </li>       
-                <li><a href="https://mixtape.scunning.com/" target="_blank">Cunningham (2021)</a> </li>
+                <li><a href="https://www.sciencedirect.com/science/article/abs/pii/S1573447107040612" target="_blank">Duflo, Glennerster & Kremer (2007)</a> </li>
                 <li><a href="https://www.cambridge.org/jp/universitypress/subjects/economics/econometrics-statistics-and-mathematical-economics/impact-evaluation-treatment-effects-and-causal-analysis?format=HB&isbn=9781107042469" target="_blank">Frölich & Sperlich (2019)</a> </li>
+                li><a href="https://mixtape.scunning.com/" target="_blank">Cunningham (2021)</a> </li>
             </ul>
             <p><b>計量経済学，数理統計学（ウェブサイト）</b></p>
             <ul>
