--- a/japanese.html
+++ b/japanese.html
@@ -67,9 +67,14 @@
                 <li> 西山・新谷・川口・奥井 <a href="https://www.yuhikaku.co.jp/books/detail/9784641053854" target="_blank">計量経済学</a> </li>
                 <li> 末石 <a href="https://www.nippyo.co.jp/shop/book/6899.html" target="_blank">計量経済学：ミクロデータ分析へのいざない</a> </li>
                 <li> 末石 <a href="https://www.nippyo.co.jp/shop/book/9267.html" target="_blank">データ駆動型回帰分析：計量経済学と機械学習の融合</a> </li>
-                <li> 川口・澤田 <a href="https://www.nippyo.co.jp/shop/book/9359.html" target="_blank">因果推論の計量経済学</a> </li>
                 <li> 西山・人見 <a href="https://www.kyoritsu-pub.co.jp/book/b10031225.html" target="_blank">ノン・セミパラメトリック統計解析</a> </li>
+                <li> 川口・澤田 <a href="https://www.nippyo.co.jp/shop/book/9359.html" target="_blank">因果推論の計量経済学</a> </li>
+                <li> 高野 <a href="https://www.nippyo.co.jp/shop/book/9500.html" target="_blank">開発経済学：実証経済学へのいざない</a> </li>
                 <li> 田中 <a href="https://www.nippyo.co.jp/shop/book/8108.html" target="_blank">計量経済学のための数学</a> </li>
+                <li> 丸山 <a href="https://www.maruzen-publishing.co.jp/book/b10121288.html" target="_blank">経済の数学解析</a> </li>
+                <li> 岡田 <a href="https://str.toyokeizai.net/books/9784492312988/" target="_blank">経済学・経営学のための数学</a> </li>                
+                <li> 瀬戸・伊吹・畑中 <a href="https://www.rokakuho.co.jp/data/books/0171.html" target="_blank">機械学習のための関数解析入門 - ヒルベルト空間とカーネル法</a> </li>
+                <li> 伊吹・山内・畑中・瀬戸 <a href="https://www.nippyo.co.jp/shop/book/8108.html" target="_blank">機械学習のための関数解析入門 - カーネル法実践：学習から制御まで</a> </li>
                 <li> 瀬戸・細川 <a href="https://www.rokakuho.co.jp/data/books/0173.html" target="_blank">関数解析入門のためのフーリエ変換・ラプラス変換・積分方程式・ルベーグ積分</a> </li>
             </ul>
             <p><b>計量経済学，数理統計学（洋書）</b></p>
@@ -77,6 +82,7 @@
                 <li><a href="https://www.cambridge.org/core/books/asymptotic-statistics/A3C7DAD3F7E66A1FA60E9C8FE132EE1D" target="_blank">van der Vaart (1998)</a> </li>
                 <li><a href="https://www.cambridge.org/core/books/causal-inference-for-statistics-social-and-biomedical-sciences/71126BE90C58F1A431FE9B2DD07938AB" target="_blank">Imbens & Rubin (2015)</a> </li>
                 <li><a href="https://mitpress.mit.edu/9780262232586/econometric-analysis-of-cross-section-and-panel-data/" target="_blank">Wooldridge (2010)</a> </li>
+                <li><a href="https://pages.stern.nyu.edu/wgreene/Text/econometricanalysis.htm" target="_blank">Greene (2017)</a> </li>
                 <li><a href="https://press.princeton.edu/books/hardcover/9780691235899/econometrics?srsltid=AfmBOop6PMmEwkbxdzOhydKjYMa3IAXQ0JoQOqO1EKZtdxQB1JjxSXhG" target="_blank">Hansen (2022)</a> </li>
                 <li><a href="https://www.sciencedirect.com/science/article/abs/pii/S1573441205800054" target="_blank">Newey & McFadden (1994)</a> </li>
                 <li><a href="https://www.jstor.org/stable/1913622" target="_blank">Pakes & Pollard (1989)</a> </li>
@@ -84,7 +90,8 @@
                 <li><a href="https://www.mostlyharmlesseconometrics.com/" target="_blank">Angrist & Pischke (2007)</a> </li>       
                 <li><a href="https://www.sciencedirect.com/science/article/abs/pii/S1573447107040612" target="_blank">Duflo, Glennerster & Kremer (2007)</a> </li>
                 <li><a href="https://www.cambridge.org/jp/universitypress/subjects/economics/econometrics-statistics-and-mathematical-economics/impact-evaluation-treatment-effects-and-causal-analysis?format=HB&isbn=9781107042469" target="_blank">Frölich & Sperlich (2019)</a> </li>
-                li><a href="https://mixtape.scunning.com/" target="_blank">Cunningham (2021)</a> </li>
+                <li><a href="https://mixtape.scunning.com/" target="_blank">Cunningham (2021)</a> </li>
+                <li><a href="https://link.springer.com/book/10.1007/b98818" target="_blank">Harville (1997)</a> </li>
             </ul>
             <p><b>計量経済学，数理統計学（ウェブサイト）</b></p>
             <ul>
