--- a/research.html
+++ b/research.html
@@ -34,7 +34,7 @@
                     <li> Selectivity Models </li>
                     <li> Censored Models </li>
                 </ul>
-                <li>Reviews on econometric papers are available <a href="https://github.com/yasu0704xx/ArticleReview" target="_blank">here</a>.</li>
+                <li>Review slides on econometric papers are available <a href="https://github.com/yasu0704xx/ArticleReview" target="_blank">here</a>.</li>
                 <ul>
                     <li> Lee, Sun, Sun and Taylor (2016, Annals of Statistics) </li>
                     <li> Roth and Sant'Anna (2023, Econometrica) </li>
