--- a/research.html
+++ b/research.html
@@ -39,6 +39,7 @@
                     <li> Berk, Brown, Buja, Zhang and Zhao (2013, Annals of Statistics)</li>
                     <li> Cattaneo, Jansson and Ma (2020, JASA) </li>
                     <li> Lee, Sun, Sun and Taylor (2016, Annals of Statistics) </li>
+                    <li> Roth (2022, AER Insghts) </li>
                     <li> Roth and Sant'Anna (2023, Econometrica) </li>
                 </ul>
             </ul>
