--- a/research.html
+++ b/research.html
@@ -21,11 +21,15 @@
   <section id="research">
        <div class="container">
             <h2>Materials</h2>
+            <h3> Econometrics 1 & 2 (2025, Kyoto U) </h3>
             <ul>
-                <li>Slides I used in Econometrics 1 & 2 (2025) in Kyoto U are available <a href="https://github.com/yasu0704xx/Econometrics2025" target="_blank">here</a>.</li>
+                <li> Slides I used in Econometrics 1 & 2 (2025) in Kyoto U are available <a href="https://github.com/yasu0704xx/Econometrics2025" target="_blank">here</a>.</li>
                 <ul>
                     <li> Nonparametric Density Estimation </li>
                 </ul>
+            </ul>
+            <h3> Econometrics 1 & 2 (2024, Kyoto U) </h3>
+            <ul>
                 <li>Slides I used in Econometrics 1 & 2 (2024) in Kyoto U are available <a href="https://github.com/yasu0704xx/Econometrics2024" target="_blank">here</a>.</li>
                 <ul>
                     <li> Semiparametric Partially Linear Models </li>
@@ -34,7 +38,11 @@
                     <li> Selectivity Models </li>
                     <li> Censored Models </li>
                 </ul>
-                <li>Review slides on econometric papers are available <a href="https://github.com/yasu0704xx/ArticleReview" target="_blank">here</a>.</li>
+            </ul>
+            <h3> Article Review </h3>
+            <ul>
+                <li> Review slides are available <a href="https://github.com/yasu0704xx/ArticleReview" target="_blank">here</a>.</li>
+                <li> Econometrics, Statistics </li>
                 <ul>
                     <li> [Under Preparation] Berk, Brown, Buja, Zhang and Zhao (2013, Annals of Statistics)</li>
                     <li> [Under Preparation] Cattaneo, Jansson and Ma (2020, JASA) </li>
@@ -42,6 +50,14 @@
                     <li> [Under Preparation] Roth (2022, AER Insghts) </li>
                     <li> Roth and Sant'Anna (2023, Econometrica) </li>
                 </ul>
+                <li> Development Economics </li>
+                <ul>
+                    <li> Anderson (2018, AER)</li>
+                </ul>         
+                <li> Empirical Industrial Organization </li>
+                <ul>
+                    <li> Kaneko and Toyama (2025, Journal of Industrial Economics) </li>
+                </ul> 
             </ul>
        </div>
        <div class="container">
