--- a/research.html
+++ b/research.html
@@ -32,9 +32,9 @@
             <ul>
                 <li>Slides I used in Econometrics 1 & 2 (2024) in Kyoto U are available <a href="https://github.com/yasu0704xx/Econometrics2024" target="_blank">here</a>.</li>
                 <ul>
-                    <li> Semiparametric Partially Linear Models </li>
+                    <li> Semiparametric Partially Linear Models [in Japanese] </li>
                     <li> Semiparametric Single Index Models </li>
-                    <li> Additive and Smooth (Varying) Coefficient Semiparametric Models </li>
+                    <li> Additive and Smooth (Varying) Coefficient Semiparametric Models [in Japanese] </li>
                     <li> Selectivity Models </li>
                     <li> Censored Models </li>
                 </ul>
