--- a/research.html
+++ b/research.html
@@ -21,16 +21,11 @@
   <section id="research">
        <div class="container">
             <h2>Materials</h2>
-            <h3> Econometrics 1 & 2 (2025, Kyoto U) </h3>
-            <ul>
-                <li> Slides I used in Econometrics 1 & 2 (2025) in Kyoto U are available <a href="https://github.com/yasu0704xx/Econometrics2025" target="_blank">here</a>.</li>
+            <h3> <a href="https://github.com/yasu0704xx/Econometrics2025" target="_blank">Econometrics 1 & 2 (2025, Kyoto U)</a> </h3>
                 <ul>
                     <li> Nonparametric Density Estimation </li>
                 </ul>
-            </ul>
-            <h3> Econometrics 1 & 2 (2024, Kyoto U) </h3>
-            <ul>
-                <li>Slides I used in Econometrics 1 & 2 (2024) in Kyoto U are available <a href="https://github.com/yasu0704xx/Econometrics2024" target="_blank">here</a>.</li>
+            <h3> <a href="https://github.com/yasu0704xx/Econometrics2024" target="_blank">Econometrics 1 & 2 (2024, Kyoto U)</a> </h3>
                 <ul>
                     <li> Semiparametric Partially Linear Models [in Japanese] </li>
                     <li> Semiparametric Single Index Models </li>
@@ -38,10 +33,8 @@
                     <li> Selectivity Models </li>
                     <li> Censored Models </li>
                 </ul>
-            </ul>
-            <h3> Article Review </h3>
+            <h3> <a href="https://github.com/yasu0704xx/ArticleReview" target="_blank">Article Review</a> </h3>
             <ul>
-                <li> Review slides are available <a href="https://github.com/yasu0704xx/ArticleReview" target="_blank">here</a>.</li>
                 <li> Econometrics, Statistics </li>
                 <ul>
                     <li> [Under Preparation] Berk, Brown, Buja, Zhang and Zhao (2013, Annals of Statistics)</li>
