--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <nav class="nav">
             <a href="index.html">Home</a>
             <a href="research.html">Research</a>
+            <a href="material.html">Material</a>
             <a href="japanese.html">Japanese</a>
         </nav>
     </header>
