--- a/japanese.html
+++ b/japanese.html
@@ -14,9 +14,10 @@
             <span>京都大学 大学院経済学研究科</span>
         </div>
         <nav class="nav">
-            <a href="index.html">Home</a>
-            <a href="research.html">Research</a>
-            <a href="japanese.html">Japanese</a>
+            <a href="index.html">ホーム</a>
+            <a href="research.html">研究</a>
+            <a href="material.html">資料</a>
+            <a href="japanese.html">日本語</a>
         </nav>
     </header>
 
