--- a/material.html
+++ b/material.html
@@ -21,12 +21,13 @@
 
   <section id="material">
        <div class="container">
-            <h2>Material</h2>
-            <h3> <a href="https://github.com/yasu0704xx/Econometrics2025" target="_blank">Econometrics 1 & 2 (2025, Kyoto U)</a> </h3>
+            <h2> <a href="https://github.com/yasu0704xx/Econometrics2025" target="_blank">Econometrics 1 & 2 (2025, Kyoto U)</a> </h2>
                 <ul>
                     <li> Nonparametric Density Estimation </li>
                 </ul>
-            <h3> <a href="https://github.com/yasu0704xx/Econometrics2024" target="_blank">Econometrics 1 & 2 (2024, Kyoto U)</a> </h3>
+       </div>
+       <div class="container">
+            <h2> <a href="https://github.com/yasu0704xx/Econometrics2024" target="_blank">Econometrics 1 & 2 (2024, Kyoto U)</a> </h2>
                 <ul>
                     <li> Semiparametric Partially Linear Models [in Japanese] </li>
                     <li> Semiparametric Single Index Models </li>
@@ -34,9 +35,11 @@
                     <li> Selectivity Models </li>
                     <li> Censored Models </li>
                 </ul>
-            <h3> <a href="https://github.com/yasu0704xx/ArticleReview" target="_blank">Article Review</a> </h3>
-            <ul>
-                <li> Econometrics, Statistics </li>
+       </div>
+
+       <div class="container">
+            <h2> <a href="https://github.com/yasu0704xx/ArticleReview" target="_blank">Article Review</a> </h2>
+                <h3> Econometrics, Statistics </h3>
                 <ul>
                     <li> [Under Preparation] Berk, Brown, Buja, Zhang and Zhao (2013, Annals of Statistics)</li>
                     <li> [Under Preparation] Cattaneo, Jansson and Ma (2020, JASA) </li>
@@ -44,16 +47,16 @@
                     <li> [Under Preparation] Roth (2022, AER Insghts) </li>
                     <li> Roth and Sant'Anna (2023, Econometrica) </li>
                 </ul>
-                <li> Development Economics </li>
+                <h3> Development Economics </h3>
                 <ul>
                     <li> Anderson (2018, AER)</li>
                 </ul>         
-                <li> Empirical Industrial Organization </li>
+                <h3> Empirical Industrial Organization </h3>
                 <ul>
                     <li> Kaneko and Toyama (2025, Journal of Industrial Economics) </li>
                 </ul> 
-            </ul>
        </div>
+      
     <footer>
         <p>&copy; 2025 Yasuyuki Matsumura. All rights reserved.</p>
     </footer>
