--- a/material.html
+++ b/material.html
@@ -41,15 +41,16 @@
             <h2> <a href="https://github.com/yasu0704xx/ArticleReview" target="_blank">Article Review</a> </h2>
                 <h3> Econometrics, Statistics </h3>
                 <ul>
-                    <li> [Under Preparation] Berk, Brown, Buja, Zhang and Zhao (2013, Annals of Statistics)</li>
-                    <li> [Under Preparation] Cattaneo, Jansson and Ma (2020, JASA) </li>
+                    <li> Berk, Brown, Buja, Zhang and Zhao (2013, Annals of Statistics) [Under Preparation] </li>
+                    <li> Cattaneo, Jansson and Ma (2020, JASA) [Under Preparation]  </li>
                     <li> Lee, Sun, Sun and Taylor (2016, Annals of Statistics) </li>
-                    <li> [Under Preparation] Roth (2022, AER Insghts) </li>
+                    <li> Roth (2022, AER Insghts) [Under Preparation] </li>
                     <li> Roth and Sant'Anna (2023, Econometrica) </li>
                 </ul>
                 <h3> Development Economics </h3>
                 <ul>
                     <li> Anderson (2018, AER)</li>
+                    <li> Corno, Hildebrandt and Voena (2020, Econometrica) [Under Preparation]   </li>
                 </ul>         
                 <h3> Empirical Industrial Organization </h3>
                 <ul>
