--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <h2>Research Interests</h2>
             <p>I am currently working on the following topics:</p>
             <ul>
-                <li>Pretesting</li>
-                <li>Selective Inference</li>
+                <li> Selective Inference, Post-Selection Inference </li>
+                <li> Pretesting </li>
             </ul>
         </div>
     </section>
