--- a/index.html
+++ b/index.html
@@ -42,11 +42,8 @@
     <section id="research">
         <div class="container">
             <h2>Research Interests</h2>
-            <p>I am currently working on the following topics:</p>
-            <ul>
-                <li> Selective Inference, Post-Selection Inference </li>
-                <li> Pretesting </li>
-            </ul>
+            <p>I am currently working on the following topics: Selective Inference, Post-Selection Inference, Pretesting. </p>
+            <p>I an also interested in Development Economics, especially in Gender Inequality.  </p>
         </div>
     </section>
 
